--- a/connexion.html
+++ b/connexion.html
@@ -82,8 +82,8 @@
                 <a href="index.html" class="text-black font-bold text-xl">OmnesBnB</a>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="recherche.html" class="text-sm text-black hover:text-black">Chercher</a>
-                    <a href="publier.html" class="text-sm text-black hover:text-black">Publier</a>
-                    <a href="mes-locations.html" class="text-sm text-black hover:text-black">Mes locations</a>
+                    <a href="publier.html" class="text-sm text-black hover:text-black">Publier / Gérer</a>
+                    <a href="mes-locations.html" class="text-sm text-black hover:text-black">Mes locations / Panier</a>
                     <div class="h-8 w-px mx-3 border-l-2 border-black"></div>
                     <a href="connexion.html" class="text-sm bg-black text-white py-2 px-6 rounded-lg hover:bg-gray-800">
                         Connexion / Inscription
@@ -97,8 +97,8 @@
             </div>
             <div id="menu-mobile" class="md:hidden hidden py-3">
                 <a href="recherche.html" class="block py-2 text-sm text-black font-medium text-center">Chercher</a>
-                <a href="publier.html" class="block py-2 text-sm text-black font-medium text-center">Publier</a>
-                <a href="mes-locations.html" class="block py-2 text-sm text-black font-medium text-center">Mes locations</a>
+                <a href="publier.html" class="block py-2 text-sm text-black font-medium text-center">Publier / Gérer</a>
+                <a href="mes-locations.html" class="block py-2 text-sm text-black font-medium text-center">Mes locations / Panier</a>
                 <div class="w-4/5 mx-auto border-t-2 border-black my-3"></div>
                 <a href="connexion.html" class="block text-sm bg-black text-white py-2 px-6 rounded-lg text-center hover:bg-gray-800">
                     Connexion / Inscription
