--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <!-- Navigation principale (PC) -->
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="recherche.html" class="text-sm text-black hover:text-black">Chercher</a>
-                    <a href="publier.html" class="text-sm text-black hover:text-black">Publier</a>
-                    <a href="mes-locations.html" class="text-sm text-black hover:text-black">Mes locations</a>
+                    <a href="publier.html" class="text-sm text-black hover:text-black">Publier / Gérer</a>
+                    <a href="mes-locations.html" class="text-sm text-black hover:text-black">Mes locations / Panier</a>
                     <!-- Barre verticale de séparation -->
                     <div class="h-8 w-px mx-3 border-l-2 border-black"></div>
                     <!-- Bouton Connexion / Inscription -->
@@ -45,8 +45,8 @@
             <!-- Menu mobile (affichage dynamique) -->
             <div id="menu-mobile" class="md:hidden hidden py-3">
                 <a href="recherche.html" class="block py-2 text-sm text-black font-medium text-center">Chercher</a>
-                <a href="publier.html" class="block py-2 text-sm text-black font-medium text-center">Publier</a>
-                <a href="mes-locations.html" class="block py-2 text-sm text-black font-medium text-center">Mes locations</a>
+                <a href="publier.html" class="block py-2 text-sm text-black font-medium text-center">Publier / Gérer</a>
+                <a href="mes-locations.html" class="block py-2 text-sm text-black font-medium text-center">Mes locations / Panier</a>
                 <!-- Barre horizontale de séparation mobile -->
                 <div class="w-4/5 mx-auto border-t-2 border-black my-3"></div>
                 <!-- Bouton Connexion / Inscription (mobile) -->
@@ -179,10 +179,6 @@
                         </div>
                         <div class="flex justify-between items-center mt-2">
                             <h3 class="text-lg font-bold">Studio à Paris 15ème</h3>
-                            <div class="flex items-center">
-                                <i class="fas fa-star text-yellow-400 mr-1"></i>
-                                <span class="font-medium">4.8</span>
-                            </div>
                         </div>
                         <p class="text-gray-600 text-sm mb-2">Paris 15ème, proche ECE</p>
                         <p class="font-bold text-lg mb-4">650€ <span class="text-gray-500 font-normal text-sm">/ mois</span></p>
