--- a/publier.html
+++ b/publier.html
@@ -17,11 +17,10 @@
       .table-box, .form-box { padding: 1.1rem 0.6rem !important; }
       .header-title { font-size: 2rem !important; }
       .header-sub { font-size: 1.1rem !important; }
-      /* Actions compactes sur mobile */
       .td-actions {
         flex-direction: column !important;
         gap: 0.5rem !important;
-        align-items: stretch !important;
+        align-items: flex-end !important; /* aligné en bas sur mobile aussi */
       }
       .btn-modifier, .btn-supprimer {
         font-size: 0.9rem !important;
@@ -45,7 +44,7 @@
   <header class="bg-white sticky top-0 z-50 border-b-2 border-black shadow-sm">
     <div class="container mx-auto px-4">
       <div class="flex items-center justify-between h-16">
-        <a href="index.html" class="text-black font-bold text-xl">OmnesBnB</a>
+        <a href="index.html" class="logo-bnb text-black font-bold text-xl">OmnesBnB</a>
         <nav class="hidden md:flex items-center space-x-6">
           <a href="recherche.html" class="text-sm text-black hover:text-black">Chercher</a>
           <a href="publier.html" class="text-sm text-black hover:text-black">Publier</a>
@@ -70,14 +69,14 @@
       </div>
     </div>
   </header>
-  <section class="bg-black py-10 px-4 flex flex-col items-center justify-center">
-    <h1 class="text-white text-4xl md:text-5xl font-bold mb-2 text-center leading-tight">Publier ou gérer vos annonces</h1>
-    <p class="text-white text-lg md:text-2xl mb-6 opacity-90 text-center">Décrivez votre logement ou gérez vos annonces existantes.</p>
+  <section class="bg-black py-12 px-4 flex flex-col items-center justify-center">
+    <h1 class="text-white text-4xl md:text-5xl font-bold mb-3 text-center leading-tight">Publier ou gérer vos annonces</h1>
+    <p class="text-white text-lg md:text-2xl mb-8 opacity-90 text-center">Décrivez votre logement ou gérez vos annonces existantes.</p>
     <div class="bg-white border-2 border-black rounded-2xl shadow-lg max-w-3xl w-full mx-auto p-0 flex flex-col items-center relative overflow-visible">
       <div class="flex w-full items-stretch relative" style="min-height:72px">
-        <button id="onglet-nouveau" class="onglet-header flex-1 text-2xl font-bold py-6 transition text-black focus:outline-none z-10">Nouvelle annonce</button>
+        <button id="onglet-nouveau" class="onglet-header flex-1 text-2xl font-bold py-5 transition text-black focus:outline-none z-10">Nouvelle annonce</button>
         <div class="absolute top-0 bottom-0 left-1/2 transform -translate-x-1/2 w-px border-l-2 border-black z-20"></div>
-        <button id="onglet-modifier" class="onglet-header flex-1 text-2xl font-bold py-6 transition text-gray-400 hover:text-black focus:outline-none z-10">Gérer mes annonces</button>
+        <button id="onglet-modifier" class="onglet-header flex-1 text-2xl font-bold py-5 transition text-gray-400 hover:text-black focus:outline-none z-10">Gérer mes annonces</button>
       </div>
     </div>
   </section>
@@ -179,7 +178,7 @@
               <tr>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Studio lumineux près du campus</td>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Publiée</td>
-                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-stretch sm:items-center justify-end min-w-0 w-full">
+                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-end justify-end min-w-0 w-full">
                   <button class="btn-modifier bg-black text-white py-2 px-2 md:px-4 rounded-lg hover:bg-gray-800 transition-all text-xs sm:text-sm w-full sm:w-auto min-w-0">Modif.</button>
                   <button class="btn-supprimer bg-white text-black py-2 px-2 md:px-4 rounded-lg border-2 border-black hover:bg-red-100 transition-all text-xs sm:text-sm w-full sm:w-auto min-w-0">Supp.</button>
                 </td>
@@ -187,15 +186,15 @@
               <tr>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Appartement T2 centre-ville</td>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Louée</td>
-                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-stretch sm:items-center justify-end min-w-0 w-full">
-                  <button disabled class="bg-gray-200 text-gray-400 py-2 px-2 md:px-4 rounded-lg text-xs sm:text-sm w-full sm:w-auto min-w-0">Modif.</button>
-                  <button disabled class="bg-gray-200 text-gray-400 py-2 px-2 md:px-4 rounded-lg text-xs sm:text-sm w-full sm:w-auto min-w-0">Supp.</button>
+                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-end justify-end min-w-0 w-full">
+                  <button disabled class="bg-gray-200 text-gray-400 py-2 px-2 md:px-4 rounded-lg text-xs sm:text-sm w-full sm:w-auto min-w-0 cursor-not-allowed">Modif.</button>
+                  <button disabled class="bg-gray-200 text-gray-400 py-2 px-2 md:px-4 rounded-lg text-xs sm:text-sm w-full sm:w-auto min-w-0 cursor-not-allowed">Supp.</button>
                 </td>
               </tr>
               <tr>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Appartement étudiant non-publié</td>
                 <td class="border-b border-gray-200 px-2 py-3 text-xs md:text-base">Non-publiée</td>
-                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-stretch sm:items-center justify-end min-w-0 w-full">
+                <td class="td-actions border-b border-gray-200 px-2 py-3 flex flex-col sm:flex-row gap-1 items-end justify-end min-w-0 w-full">
                   <button class="btn-modifier bg-black text-white py-2 px-2 md:px-4 rounded-lg hover:bg-gray-800 transition-all text-xs sm:text-sm w-full sm:w-auto min-w-0">Modif.</button>
                   <button class="btn-supprimer bg-white text-black py-2 px-2 md:px-4 rounded-lg border-2 border-black hover:bg-red-100 transition-all text-xs sm:text-sm w-full sm:w-auto min-w-0">Supp.</button>
                 </td>
@@ -211,9 +210,9 @@
     <div class="container mx-auto max-w-3xl text-center">
       <h2 class="text-2xl font-bold mb-4">Et maintenant ?</h2>
       <p class="text-sm mb-6 opacity-90">
-        N’hésitez pas à découvrir nos logements en ligne sur OmnesBnB, et trouvez votre futur chez-vous en quelques clics.
+        N'hésitez pas à découvrir nos logements en ligne sur OmnesBnB, et trouvez votre futur chez-vous en quelques clics.
       </p>
-      <a href="recherche.html" class="bg-white text-black font-medium py-2 px-6 rounded-lg border border-white hover:bg-gray-100 inline-flex items-center shadow-md">
+      <a href="recherche.html" class="footer-btn bg-white text-black font-medium py-2 px-6 rounded-lg border border-white hover:bg-gray-100 inline-flex items-center shadow-md">
         <i class="fas fa-magnifying-glass mr-2"></i> Chercher un logement
       </a>
       <div class="mt-12 pt-4 border-t border-gray-700 mx-auto w-full"></div>
@@ -234,11 +233,15 @@
     const blocNouveau = document.getElementById('bloc-nouveau');
     const blocModifier = document.getElementById('bloc-modifier');
 
-    // Sélection des boutons/links du header à désactiver aussi
+    // Sélection des boutons/links du header + logo + bouton footer à désactiver aussi
     const headerLinks = Array.from(document.querySelectorAll('header nav a, header nav button'));
+    const logoBNB = document.querySelector('a.logo-bnb');
+    const footerBtn = document.querySelector('a.footer-btn');
+    const allLockable = headerLinks.concat([logoBNB, footerBtn]);
 
     function lockHeaderLinks(lock) {
-      headerLinks.forEach(link => {
+      allLockable.forEach(link => {
+        if (!link) return;
         if (lock) {
           link.classList.add('cursor-not-allowed', 'opacity-60');
           link.dataset.oldHref = link.getAttribute('href');
@@ -285,7 +288,7 @@
         if(etat === "Louée" || window._editLock) return;
         window._editLock = true;
 
-        // Désactive tout le reste (Modifier/Supprimer + onglets + header links)
+        // Désactive tout le reste (Modifier/Supprimer + onglets + header links + logo + footer)
         document.querySelectorAll('#bloc-modifier .btn-modifier').forEach(function(button) {
           button.disabled = true;
           button.classList.add('opacity-50', 'cursor-not-allowed');
