--- a/connexion.html
+++ b/connexion.html
@@ -151,7 +151,7 @@
                             <input type="checkbox" class="checkbox-uber" />
                             <span class="text-base text-gray-700 font-medium">Se souvenir de moi</span>
                         </label>
-                        <a href="#" class="lien-noir">Mot de passe oublié&nbsp;?</a>
+                        <a href="motdepasse.html" class="lien-noir">Mot de passe oublié&nbsp;?</a>
                     </div>
                     <button type="submit" class="bg-black text-white font-bold py-4 px-8 rounded-lg w-full hover:bg-gray-800 transition-all shadow-md text-2xl">
                         Se connecter
